# the_cure_language

./: .gitignore  CMakeLists.txt  README.md  gr1.dot  gr1.txt  gr1Out.txt  main.cpp
backend/: backend.cpp  backend.h
dumps/: dumps.cpp  dumps.h
examples/: ASMhardInterNalIfElse.txt  ASMifelseCall.txt  ASMwhile.txt  asmIfElse.txt  fact.txt  fib.txt  hardInterNalIfElse.txt  ifelseCall.txt  internalIfElse.txt  isequal.txt  langIsElse.txt  solveQudr.txt  sq.txt  sumWhile.txt  while.txt
frontend/: chooseTheCure.h  frontend.cpp  frontend.h  language.cpp  language.h  lexer.cpp  lexer.h
